--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -23,7 +23,8 @@ ServerAPIAddress = "http://127.0.0.1:11556/rpc"
 MinRelayFee   = 400
 RelayFeePerKb = 2000
 UtxoAggregateMinCount = 10
-UtxoAggregateMinValue = 100000
+UtxoAggregateMinValue = 100000 # unit satoshi
+UtxoAggregateToAddress = "mfwPnCuht2b4Lvb5XTds4Rvzy3jZ2ZWrBL"
 
 # source token config
 [SrcToken]
