separate deposit and withdraw address

--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -36,6 +36,7 @@ Symbol = "BTC"
 Decimals = 8
 Description = "Bitcoin Coin"
 ContractAddress = ""
+DepositAddress = "mfwPnCuht2b4Lvb5XTds4Rvzy3jZ2ZWrBL"
 DcrmAddress = "mfwPnCuht2b4Lvb5XTds4Rvzy3jZ2ZWrBL"
 Confirmations = 0 # suggest >= 6 for Mainnet
 MaximumSwap = 1000.0
