add disable flag in token config

--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -46,6 +46,7 @@ InitialHeight = 0
 MinTimeToRetry = 0 # unit seconds, suggest >= 3600 for Mainnet
 PlusGasPricePercentage = 15 # plus 15% gas price
 BigValueThreshold = 5.0
+DisableSwap = false
 
 # source blockchain gateway config
 [SrcGateway]
@@ -70,6 +71,7 @@ InitialHeight = 0
 MinTimeToRetry = 0 # unit seconds, suggest >= 420 for Mainnet
 PlusGasPricePercentage = 15 # plus 15% gas price
 BigValueThreshold = 50.0
+DisableSwap = false
 
 # dest blockchain gateway config
 [DestGateway]
