--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -1,6 +1,11 @@
 # a short string to identify the bridge
 Identifier = "BTC2ETH"
 
+Admins = [
+	"0x3dfaef310a1044fd7d96750b42b44cf3775c00bf",
+	"0x46cbe22b687d4b72c8913e4784dfe5b20fdc2b0e"
+]
+
 # modgodb database connection config (server only)
 [MongoDB]
 DBURL = "localhost:27017"
