--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -41,42 +41,12 @@ UtxoAggregateToAddress = "mfwPnCuht2b4Lvb5XTds4Rvzy3jZ2ZWrBL"
 [SrcChain]
 BlockChain = "Bitcoin"
 NetID = "TestNet3"
-
-# source token config
-[SrcToken]
-# ID must be ERC20 if source token is erc20 token
-ID = "BTC"
-Name = "Bitcoin Coin"
-Symbol = "BTC"
-Decimals = 8
-Description = "Bitcoin Coin"
-# if ID is ERC20, this is the erc20 token's contract address
-ContractAddress = ""
-# deposit to this address to make swap
-DepositAddress = "mfwPnCuht2b4Lvb5XTds4Rvzy3jZ2ZWrBL"
-# withdraw from this address
-DcrmAddress = "mfwPnCuht2b4Lvb5XTds4Rvzy3jZ2ZWrBL"
 # tx should be in chain with at least so many confirmations to be valid on source chain
 Confirmations = 0 # suggest >= 6 for Mainnet
-# maximum deposit value
-MaximumSwap = 1000.0
-# minimum deposit value
-MinimumSwap = 0.00001
-# calced deposit fee = deposit value * this rate (when in [min, max] deposit fee range)
-SwapFeeRate = 0.001
-# maximum deposit fee, if calced deposit fee is larger than this fee, then use this value as deposit fee
-MaximumSwapFee = 0.01
-# minimum deposit fee, if calced deposit fee is smaller than this fee, then use this value as deposit fee
-MinimumSwapFee = 0.00001
 # only tx with block height >= this initial height should be considered valid on source chain
 InitialHeight = 0
-# plus this percentage of gas price to make tx more easier to be mined in source chain
-# corresponding to send asset on source chain (eg. BTC) for withdrawing
-PlusGasPricePercentage = 15 # plus 15% gas price
-# if deposit value is larger than this value then need more verify strategy
-BigValueThreshold = 5.0
-# disable deposit function if this flag is true
-DisableSwap = false
+# whether enable scan blocks and register swaps
+EnableScan = false
 
 # source blockchain gateway config
 [SrcGateway]
@@ -86,39 +56,12 @@ APIAddress = ["http://47.107.50.83:3002"]
 [DestChain]
 BlockChain = "Ethereum"
 NetID = "Rinkeby"
-
-# dest token config
-[DestToken]
-ID = "mBTC"
-Name = "SMPC Bitcoin"
-Symbol = "mBTC"
-Decimals = 8
-Description = "cross chain bridge BTC with mBTC"
-# mapping erc20 token address
-ContractAddress = "0x61b8c4d6d28d5f7edadbea5456db3b4f7f836b64"
-# mapping erc20 token creator
-DcrmAddress = "0xbF0A46d3700E23a98F38079cE217742c92Bb66bC"
-# tx should be in chain with at least so many confirmations to be valid on dest chain
-Confirmations = 0 # suggest >= 33 for Mainnet
-# maximum withdraw value
-MaximumSwap = 100.0
-# minimum withdraw value
-MinimumSwap = 0.00001
-# calced withdraw fee = withdraw value * this rate (when in [min, max] withdraw fee range)
-SwapFeeRate = 0.001
-# maximum withdraw fee, if calced withdraw fee is larger than this fee, then use this value as withdraw fee
-MaximumSwapFee = 0.01
-# minimum withdraw fee, if calced withdraw fee is smaller than this fee, then use this value as withdraw fee
-MinimumSwapFee = 0.00001
-# only tx with block height >= this initial height should be considered valid on dest chain
+# tx should be in chain with at least so many confirmations to be valid on source chain
+Confirmations = 0 # suggest >= 30 for Mainnet
+# only tx with block height >= this initial height should be considered valid on source chain
 InitialHeight = 0
-# plus this percentage of gas price to make tx more easier to be mined in dest chain
-# corresponding to send mapping token on dest chain (eg. mBTC) for depositing
-PlusGasPricePercentage = 1 # plus 1% gas price
-# if withdraw value is larger than this value then need more verify strategy
-BigValueThreshold = 50.0
-# disable withdraw function if this flag is true
-DisableSwap = false
+# whether enable scan blocks and register swaps
+EnableScan = false
 
 # dest blockchain gateway config
 [DestGateway]
