modify cosmos and terra, dynamic add tokens

--- a/tokens/cosmos/tokenPairConfigs/cosmos-config-tokenpair-example.toml
+++ b/tokens/cosmos/tokenPairConfigs/cosmos-config-tokenpair-example.toml
@@ -33,6 +33,8 @@ PlusGasPricePercentage = 15 # plus 15% gas price
 BigValueThreshold = 5.0
 # disable deposit function if this flag is true
 DisableSwap = false
+# Unit name
+Unit = "uatom"
 
 # dest token config
 [DestToken]
