update replace swap gas price calc

--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -66,6 +66,8 @@ EnableScanPool = false
 ScanReceipt = false
 # max gas price fluct percent
 MaxGasPriceFluctPercent = 10
+# extra added gas price percent for replace swap
+ReplacePlusGasPricePercent = 10
 # wait time to replace swapout match tx
 WaitTimeToReplace = 900
 # max replace swap count
@@ -94,6 +96,8 @@ EnableScanPool = false
 ScanReceipt = false
 # max gas price fluct percent
 MaxGasPriceFluctPercent = 10
+# extra added gas price percent for replace swap
+ReplacePlusGasPricePercent = 10
 # wait time to replace swapin match tx
 WaitTimeToReplace = 900
 # max replace swap count
