extract function isSwapoutToStringAddress

--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -28,9 +28,6 @@ AllowedOrigins = []
 # post swap register RPC requests to this server
 ServerAPIAddress = "http://127.0.0.1:11556/rpc"
 
-[Extra]
-MinReserveFee = "10000000000000000"
-
 # customize fees in building btc transaction (btc only)
 [BtcExtra]
 # minimum relay fee of tx
@@ -49,6 +46,10 @@ UtxoAggregateMinCount = 20
 UtxoAggregateMinValue = 1000000 # unit satoshi
 # aggreate to this address
 UtxoAggregateToAddress = "mfwPnCuht2b4Lvb5XTds4Rvzy3jZ2ZWrBL"
+
+[Extra]
+MinReserveFee = "10000000000000000"
+IsSwapoutToStringAddress = false
 
 # source chain config
 [SrcChain]
