--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -50,6 +50,7 @@ UtxoAggregateToAddress = "mfwPnCuht2b4Lvb5XTds4Rvzy3jZ2ZWrBL"
 MustRegisterAccount = false
 MinReserveFee = "10000000000000000"
 IsSwapoutToStringAddress = false
+EnableCheckBlockFork = false
 
 # source chain config
 [SrcChain]
