--- a/params/config-tokenpair-example.toml
+++ b/params/config-tokenpair-example.toml
@@ -72,3 +72,12 @@ DisableSwap = false
 DefaultGasLimit = 90000
 # allow swapout from contract address
 AllowSwapoutFromContract = false
+# minimum reserve coin for gas provide
+MinReserveFee = "10000000000000000"
+# dynamic fee tx related (EIP-1559)
+IsDynamicFeeTxEnabled = false
+PlusGasTipCapPercent = 10
+PlusGasFeeCapPercent = 10
+BlockCountFeeHistory = 3
+MaxGasTipCap = "5000000000"
+MaxGasFeeCap = "10000000000"
