--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -100,6 +100,8 @@ WaitTimeToReplace = 900
 MaxReplaceCount = 20
 # enable replace swap job
 EnableReplaceSwap = false
+# use fixed gas price (no adjust)
+FixedGasPrice = "5000000001"
 
 # dest blockchain gateway config
 [DestGateway]
