--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -26,6 +26,8 @@ AllowedOrigins = []
 [Oracle]
 # post swap register RPC requests to this server
 ServerAPIAddress = "http://127.0.0.1:11556/rpc"
+# getting accept list interval in accept job
+GetAcceptListInterval = 20
 
 # customize fees in building btc transaction (btc only)
 [BtcExtra]
