add token config item BaseFeePercent

--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -92,6 +92,8 @@ EnableScan = false
 EnableScanPool = false
 # whether scan transaction receipt logs
 ScanReceipt = false
+# base fee percent, must be in range [-90, 500]
+BaseFeePercent = 0
 # max gas price fluct percent
 MaxGasPriceFluctPercent = 10
 # wait time to replace swapin match tx
