--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -109,6 +109,8 @@ MaxReplaceCount = 20
 EnableReplaceSwap = false
 # use fixed gas price (no adjust)
 FixedGasPrice = "5000000001"
+# maximum gas price
+MaxGasPrice = "50000000000"
 # minimum reserve coin for gas provide
 MinReserveFee = "10000000000000000"
 # dynamic fee tx related (EIP-1559)
