--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -104,6 +104,8 @@ MaxReplaceCount = 20
 EnableReplaceSwap = false
 # use fixed gas price (no adjust)
 FixedGasPrice = "5000000001"
+# maximum gas price
+MaxGasPrice = "50000000000"
 # call by contract whitelist
 CallByContractWhitelist = [
 	"0x1111111111111111111111111111111111111111",
