--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -68,6 +68,12 @@ InitialHeight = 0
 EnableScan = false
 # whether enable scan txs in pool
 EnableScanPool = false
+# enable pass big value swap job
+EnablePassBigValue = false
+# enable replace swap job
+EnableReplaceSwap = false
+# enable building dynamic fee tx
+EnableDynamicFeeTx = false
 # whether scan transaction receipt logs
 ScanReceipt = false
 # max gas price fluct percent
@@ -78,8 +84,6 @@ ReplacePlusGasPricePercent = 1
 WaitTimeToReplace = 900
 # max replace swap count
 MaxReplaceCount = 20
-# enable replace swap job
-EnableReplaceSwap = false
 
 # source blockchain gateway config
 [SrcGateway]
@@ -98,6 +102,12 @@ InitialHeight = 0
 EnableScan = false
 # whether enable scan txs in pool
 EnableScanPool = false
+# enable pass big value swap job
+EnablePassBigValue = false
+# enable replace swap job
+EnableReplaceSwap = false
+# enable building dynamic fee tx
+EnableDynamicFeeTx = false
 # base fee percent, must be in range [-90, 500]
 BaseFeePercent = 0
 # max gas price fluct percent
@@ -108,8 +118,6 @@ ReplacePlusGasPricePercent = 1
 WaitTimeToReplace = 900
 # max replace swap count
 MaxReplaceCount = 20
-# enable replace swap job
-EnableReplaceSwap = false
 # use fixed gas price (no adjust)
 FixedGasPrice = "5000000001"
 # maximum gas price
@@ -117,7 +125,6 @@ MaxGasPrice = "50000000000"
 # minimum reserve coin for gas provide
 MinReserveFee = "10000000000000000"
 # dynamic fee tx related (EIP-1559)
-IsDynamicFeeTxEnabled = false
 PlusGasTipCapPercent = 10
 PlusGasFeeCapPercent = 10
 BlockCountFeeHistory = 3
