--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -29,6 +29,7 @@ AllowedOrigins = []
 ServerAPIAddress = "http://127.0.0.1:11556/rpc"
 
 [Extra]
+IsDebugMode = false
 MinReserveFee = "10000000000000000"
 
 # customize fees in building btc transaction (btc only)
