add extra config item IsSwapoutToStringAddress

--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -30,6 +30,7 @@ ServerAPIAddress = "http://127.0.0.1:11556/rpc"
 
 [Extra]
 IsDebugMode = false
+IsSwapoutToStringAddress = false
 MinReserveFee = "10000000000000000"
 
 # customize fees in building btc transaction (btc only)
