update min reserve fee defaults to 0.1 Coin

--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -126,8 +126,8 @@ MaxReplaceCount = 20
 FixedGasPrice = "5000000001"
 # maximum gas price
 MaxGasPrice = "50000000000"
-# minimum reserve coin for gas provide
-MinReserveFee = "10000000000000000"
+# minimum reserve coin for gas provide (defaults to 1e17 wei)
+MinReserveFee = "100000000000000000"
 # dynamic fee tx related (EIP-1559)
 PlusGasTipCapPercent = 10
 PlusGasFeeCapPercent = 10
