--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -34,6 +34,7 @@ ServerAPIAddress = "http://127.0.0.1:11556/rpc"
 IsDebugMode = false
 IsSwapoutToStringAddress = false
 IsNullSwapoutNativeMemo = false
+UsePendingBalance = false
 
 # customize fees in building btc transaction (btc only)
 [BtcExtra]
