add extra config item 'UsePendingBalance'

--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -62,6 +62,7 @@ MustRegisterAccount = false
 IsSwapoutToStringAddress = false
 EnableCheckBlockFork = false
 IsNullSwapoutNativeMemo = false
+UsePendingBalance = false
 
 # source chain config
 [SrcChain]
