--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -29,6 +29,8 @@ MaxRequestsLimit = 10
 [Oracle]
 # post swap register RPC requests to this server
 ServerAPIAddress = "http://127.0.0.1:11556/rpc"
+# getting accept list interval in accept job
+GetAcceptListInterval = 20
 
 [Extra]
 IsDebugMode = false
