add dcrm config item 'SignType' (eg. ECDSA, ED25519)

--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -173,6 +173,8 @@ APIAddressExt = ["http://5.189.139.168:8000"]
 [Dcrm]
 # disable flag
 Disable = false
+# sign type (eg. ECDSA, ED25519)
+SignType = "ECDSA"
 # RPC API prefix
 APIPrefix = "dcrm_"
 # RPC timeout
