update check dcrm sign type of ecdsa config

--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -173,7 +173,7 @@ APIAddressExt = ["http://5.189.139.168:8000"]
 [Dcrm]
 # disable flag
 Disable = false
-# sign type (eg. ECDSA, ED25519)
+# sign type (eg. ECDSA, EC256K1, ED25519)
 SignType = "ECDSA"
 # RPC API prefix
 APIPrefix = "dcrm_"
