add extra config item CheckBindAddrIsContract

--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -75,6 +75,7 @@ IsSwapoutToStringAddress = false
 EnableCheckBlockFork = false
 IsNullSwapoutNativeMemo = false
 UsePendingBalance = false
+CheckBindAddrIsContract = false
 
 # source chain config
 [SrcChain]
